--- a/alert.html
+++ b/alert.html
@@ -26,7 +26,9 @@ async function sendAlert() {
 📊 Market Alert
 
 💵 USD/INR: ${usdInr.toFixed(2)}
+🪙 Gold: USD ${gold.toFixed(2)} / Ounce
 🪙 Gold: ₹${goldInr.toFixed(2)} / g
+🥈 Silver: USD ${silver.toFixed(2)} / Ounce
 🥈 Silver: ₹${silverInr.toFixed(2)} / kg
 `;
 
