--- a/index.html
+++ b/index.html
@@ -73,12 +73,19 @@ h1 {
 }
 
 footer {
-  margin-top: 40px;
+  margin-top: 30px;
   padding: 15px;
   text-align: center;
   color: #94a3b8;
   font-size: 14px;
   border-top: 1px solid #1e293b;
+}
+
+.updated {
+  text-align: center;
+  margin-top: 10px;
+  font-size: 13px;
+  color: #94a3b8;
 }
 </style>
 </head>
@@ -109,13 +116,10 @@ footer {
       Silver (INR / Kg)<br>
       <div class="value" id="silverInr">...</div>
     </div>
+  </div>
 
-    <div class="card">
-      🛢 Crude Oil (USD / barrel)<br>
-      <div class="value" id="oilUsd">...</div><br>
-      Crude (INR / liter)<br>
-      <div class="value" id="oilInr">...</div>
-    </div>
+  <div class="updated" id="lastUpdated">
+    Last updated: --
   </div>
 
   <footer>
@@ -126,7 +130,7 @@ footer {
 <div class="status-panel">
   <strong>🚀 System Status</strong><br><br>
   <span>✔</span> Live financial dashboard<br>
-  <span>✔</span> Gold, silver, crude, forex<br>
+  <span>✔</span> Gold, silver, forex<br>
   <span>✔</span> Telegram bot alerts<br>
   <span>✔</span> Scheduled automation<br>
   <span>✔</span> No server<br>
@@ -137,13 +141,16 @@ footer {
 <script>
 async function loadData() {
   try {
+    // USD to INR
     const forex = await fetch("https://open.er-api.com/v6/latest/USD");
     const forexData = await forex.json();
     const usdInr = forexData.rates.INR;
     document.getElementById("usdInr").innerText = usdInr.toFixed(2);
 
+    // Gold & Silver
     const metals = await fetch("https://data-asg.goldprice.org/dbXRates/USD");
     const metalsData = await metals.json();
+
     const gold = metalsData.items[0].xauPrice;
     const silver = metalsData.items[0].xagPrice;
 
@@ -156,21 +163,20 @@ async function loadData() {
     document.getElementById("goldInr").innerText = "₹" + goldInr.toFixed(2);
     document.getElementById("silverInr").innerText = "₹" + silverInr.toFixed(2);
 
-    const oil = await fetch("https://query1.finance.yahoo.com/v7/finance/quote?symbols=CL=F");
-    const oilData = await oil.json();
-    const oilUsd = oilData.quoteResponse.result[0].regularMarketPrice;
-
-    document.getElementById("oilUsd").innerText = "$" + oilUsd.toFixed(2);
-
-    const oilInr = (oilUsd * usdInr) / 158.987;
-    document.getElementById("oilInr").innerText = "₹" + oilInr.toFixed(2);
+    // Update time
+    const now = new Date();
+    document.getElementById("lastUpdated").innerText =
+      "Last updated: " + now.toLocaleTimeString();
 
   } catch (e) {
-    console.error(e);
+    console.error("Error loading data", e);
   }
 }
 
+// Load immediately
 loadData();
+
+// Auto refresh every 60 seconds
 setInterval(loadData, 60000);
 </script>
 
