--- a/index.html
+++ b/index.html
@@ -123,20 +123,10 @@ footer {
   </div>
 
   <footer>
-    Built by Solomon | Powered by Open Web APIs
+    Built by Solomon jones Kodidety 
   </footer>
 </div>
 
-<div class="status-panel">
-  <strong>🚀 System Status</strong><br><br>
-  <span>✔</span> Live financial dashboard<br>
-  <span>✔</span> Gold, silver, forex<br>
-  <span>✔</span> Telegram bot alerts<br>
-  <span>✔</span> Scheduled automation<br>
-  <span>✔</span> No server<br>
-  <span>✔</span> No backend<br>
-  <span>✔</span> 100% free stack
-</div>
 
 <script>
 async function loadData() {
