--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ footer {
 
   <!-- 🔘 Navigation Buttons -->
   <div class="buttons">
-    <a href="https://joneskys.github.io/jonny">📊 Dashboard</a>
-    <a href="https://joneskys.github.io/final">📊 Must Pick </a>
-    <a href="alert.html">🔔 Telegram Alerts</a>
-    <a href="https://cron-job.org">⚙️ Settings of Alerts</a>
+    <a href="https://joneskys.github.io/jonny" target="_blank">📊 Dashboard</a>
+    <a href="https://joneskys.github.io/final" target="_blank">📊 Must Pick </a>
+    <a href="alert.html" target="_blank">🔔 Telegram Alerts</a>
+    <a href="https://cron-job.org" target="_blank">⚙️ Settings of Alerts</a>
     
   </div>
 
